--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 
             <div class="icon-container" layout="row" layout-align="end center">
                 <div ng-show="tb.isSignedIn" layout="row">
-                    <div class="SettingsBtn" layout="row" layout-align="center center">
+                    <div class="SettingsBtn" ng-click="tb.selectView(6)" layout="row" layout-align="center center">
                         <i title="Settings" class="material-icons">settings</i>
                         <span>Settings</span>
                     </div>
