renamed controllers to more appropriate names; added devise user edit

--- a/app/views/home/frame.html.erb
+++ b/app/views/home/frame.html.erb
@@ -1,38 +1,38 @@
-<body class="noScrollbar" layout="column" ng-controller="ToolbarController as tb">
+<body class="noScrollbar" layout="column" ng-controller="FrameController as fc">
     <md-toolbar id="toolbar" flex="10">
         <div class="md-toolbar-tools">
 
             <div layout="row" layout-align="start start" flex="15">
-                <h1 class="logo" ng-click="tb.selectView(0)">DatDough</h1>
+                <h1 class="logo" ng-click="fc.selectView(0)">DatDough</h1>
             </div>
 
             <span flex></span>
 
             <div class="icon-container" layout="row" layout-align="end center">
-                <div ng-show="tb.isSignedIn" layout="row">
-                    <div class="SettingsBtn" ng-click="tb.selectView(6)" layout="row" layout-align="center center">
+                <div ng-show="fc.isSignedIn" layout="row">
+                    <div class="SettingsBtn" ng-click="fc.selectView(6)" layout="row" layout-align="center center">
                         <i title="Settings" class="material-icons">settings</i>
                         <span>Settings</span>
                     </div>
-                    <div class="TableBtn" ng-click="tb.selectView(4)" layout="row" layout-align="center center">
+                    <div class="TableBtn" ng-click="fc.selectView(4)" layout="row" layout-align="center center">
                         <i title="Table" class="material-icons">assessment</i>
                         <span>Table</span>
                     </div>
-                    <div class="GraphBtn" ng-click="tb.selectView(5)" layout="row" layout-align="center center">
+                    <div class="GraphBtn" ng-click="fc.selectView(5)" layout="row" layout-align="center center">
                         <i title="Graph" class="material-icons">assessment</i>
                         <span>Graph</span>
                     </div>
-                    <div class="signOutBtn" ng-click="tb.signOut()" layout="row" layout-align="center center">
+                    <div class="signOufctn" ng-click="fc.signOut()" layout="row" layout-align="center center">
                         <i title="Sign Out" class="material-icons">exit_to_app</i>
                         <span>Sign Out</span>
                     </div>
                 </div>
-                <div ng-hide="tb.isSignedIn" layout="row">
-                    <div class="signUpBtn" ng-click="tb.selectView(2)" layout="row" layout-align="center center">
+                <div ng-hide="fc.isSignedIn" layout="row">
+                    <div class="signUpBtn" ng-click="fc.selectView(2)" layout="row" layout-align="center center">
                         <i title="Sign Up" class="material-icons">create</i>
                         <span>Sign Up</span>
                     </div>
-                    <div class="signInBtn" ng-click="tb.selectView(1)" layout="row" layout-align="center center">
+                    <div class="signInBtn" ng-click="fc.selectView(1)" layout="row" layout-align="center center">
                         <i title="Sign In" class="material-icons">exit_to_app</i>
                         <span>Sign In</span>
                     </div>
@@ -42,5 +42,5 @@
         </div>
     </md-toolbar>
     <!-- Content -->
-    <div flex="90" ng-include="tb.template" fullheight></div>
+    <div flex="90" ng-include="fc.template" fullheight></div>
 </body>
