added variables.scss, for reusability

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
 
   <form class="button_to" method="post" action="/users">
     <input type="hidden" name="_method" value="delete"/>
-    <input data-confirm="Are you sure?" class="md-button btn-danger" type="submit" value="Cancel my account" />
+    <input data-confirm="Are you sure?" class="md-button btn-danger" type="submit" value="Deactivate Account" />
     <input type="hidden" name="authenticity_token" value="wMgbrz6vqDQSW4E3/gwQhy/LeyFj2Qv/BhSD1KqAAe6ZB3DqI77NtVJuSquP4NYNrK+0HDSF+mxmRhsbkEKVvA==" />
   </form>
 
