added table css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 /*
 *= require angular-material/angular-material.min
 *= require material_icons
+*= require mdDataTable//dist/md-data-table-style
 *= require nv.d3
 *= require_tree .
 */
