--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -14,12 +14,17 @@
 		}
 	}
 
+	.md-toolbar-tools {
+		padding: 0;
+	}
+
 	.tableSection {
 		width: 80%;
 	}
 
 	.tableOfHistory{
 		width: 100%;
+		max-height: 60%;
 	}
 
 }
