added category graphs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 /*
 *= require angular-material/angular-material.min
+*= require angular-material/angular-material.layouts.min
+*= require angular-material-icons/angular-material-icons
+*= require nvd3/build/nv.d3.min
 *= require material_icons
-*= require nv.d3
 *= require_tree .
 */
