added graph controller and bargraph in frontend

--- a/app/views/home/graph.html.erb
+++ b/app/views/home/graph.html.erb
@@ -1,6 +1,5 @@
 <div ng-controller="GraphController as gc">
-	<p>Income</p>
-	<nvd3 options="gc.categoryOption" data="gc.income.data"></nvd3>
-	<p>Expense</p>
-	<nvd3 options="gc.categoryOption" data="gc.expense.data"></nvd3>
+	<p>Expenses</p>
+	<nvd3 options="gc.barOptions" data="gc.barData"></nvd3>
+
 </div>
