added pie graph, table infinite loading, loading gif

--- a/app/views/home/frame.html.erb
+++ b/app/views/home/frame.html.erb
@@ -42,5 +42,5 @@
         </div>
     </md-toolbar>
     <!-- Content -->
-    <div flex="90" id="mainFrame" ng-include="fc.template" fullheight></div>
+    <div flex="90" id="mainFrame" ng-include="fc.template" fullheight scrolly="fc.scroll()"></div>
 </body>
