--- a/app/views/home/table.html.erb
+++ b/app/views/home/table.html.erb
@@ -17,43 +17,26 @@
       <i ng-click="tc.searchToggle()" class="material-icons">filter_list</i>
       <i ng-click="fc.selectView(7)" class="material-icons">add</i>
     </div>
+    <h4 ng-hide="tc.expenses.length">No Transactions</h1>
+    <mdt-table sortable-columns="true" ng-show="tc.expenses.length" class="tableOfHistory" >
+      <mdt-header-row>
+        <mdt-column sortable-rows-default>Date</mdt-column>
+        <mdt-column sortable-rows-default>Amount</mdt-column>
+        <mdt-column sortable-rows-default>Category</mdt-column>
+        <mdt-column sortable-rows-default>Description</mdt-column>
+        <mdt-column sortable-rows-default>Transaction Type</mdt-column>
+        <mdt-column sortable-rows-default>Payment Method</mdt-column>
+      </mdt-header-row>
 
-    <mdt-table sortable-columns="true" class="tableOfHistory">
-          <mdt-header-row>
-              <mdt-column sortable-rows-default>
-                  Date
-              </mdt-column>
-
-              <mdt-column sortable-rows-default>
-                  Amount
-              </mdt-column>
-
-              <mdt-column sortable-rows-default>
-                  Category
-              </mdt-column>
-
-              <mdt-column sortable-rows-default>
-                  Description
-              </mdt-column>
-
-              <mdt-column sortable-rows-default>
-                  Transaction Type
-              </mdt-column>
-
-              <mdt-column sortable-rows-default>
-                  Payment Method
-              </mdt-column>
-
-          </mdt-header-row>
-
-          <mdt-row ng-repeat="expense in tc.expenses | orderBy: ['date','created_at']:true track by $index">
-              <mdt-cell>{{expense.date | date: 'MM/dd/yyyy'}}</mdt-cell>
-              <mdt-cell>{{expense.amount | currency}}</mdt-cell>
-              <mdt-cell>{{expense.category}}</mdt-cell>
-              <mdt-cell>{{expense.description | limitTo: 15 }}</mdt-cell>
-              <mdt-cell>{{expense.transaction_type}}</mdt-cell>
-              <mdt-cell>{{expense.payment_method}}</mdt-cell>
-          </mdt-row>
-      </mdt-table>
+      <mdt-row ng-repeat="expense in tc.expenses | orderBy: ['date','created_at']:true track by $index">
+        <mdt-cell>{{expense.date | date: 'MM/dd/yyyy'}}</mdt-cell>
+        <mdt-cell>{{expense.amount | currency}}</mdt-cell>
+        <mdt-cell>{{expense.category}}</mdt-cell>
+        <mdt-cell>{{expense.description | limitTo: 15 }}</mdt-cell>
+        <mdt-cell>{{expense.transactionType}}</mdt-cell>
+        <mdt-cell>{{expense.paymentMethod}}</mdt-cell>
+      </mdt-row>
+    </mdt-table>
+    <%= image_tag "hex-loader.gif", alt: "Loading...", 'ng-show' => 'tc.loading' %>
   </div>
 <md-content>
