made css changes

--- a/app/assets/stylesheets/design.scss
+++ b/app/assets/stylesheets/design.scss
@@ -7,3 +7,12 @@
 .noScrollbar {
 	overflow: hidden;
 }
+
+.borderBtn {
+	border: solid 1px;
+}
+
+.errorBtn {
+	border: solid 1px red;
+	color: red;
+}
