--- a/app/views/home/graph.html.erb
+++ b/app/views/home/graph.html.erb
@@ -1,9 +1,18 @@
 <div ng-controller="GraphController as gc" id="popupContainer">
-	<button ng-click="gc.showDialog($event)">DATE</button>
-	<h2>Expenses from {{gc.startDate | date:'MMM/dd'}} ~ {{gc.endDate | date:'MMM/dd'}}</h2>
-	<p>Daily Expenses</p>
-	<nvd3 options="gc.barOptions" data="gc.barData"></nvd3>
+	
+	<div class="expenseDate" layout="row" layout-align="start center">
+		<h2>Expenses from {{gc.startDate | date:'MMM dd yyyy'}} ~ {{gc.endDate | date:'MMM dd yyyy'}}</h2>
+		<md-button class="borderBtn" ng-click="gc.showDialog($event)">DATE</md-button>
+	</div>
 
-	<p>Category Expenses</p>
-	<nvd3 options="gc.pieOptions" data="gc.pieData"></nvd3>
+	<div class="graphs">
+		<span class="graphTitles">Daily Expenses</span>
+		<nvd3 options="gc.barOptions" data="gc.barData"></nvd3>
+	</div>
+
+	<div class="graphs">
+		<span class="graphTitles">Category Expenses</span>
+		<nvd3 options="gc.pieOptions" data="gc.pieData"></nvd3>
+	</div>
+	
 </div>
