hides lbl when window size is too small

--- a/app/views/home/frame.html.erb
+++ b/app/views/home/frame.html.erb
@@ -12,19 +12,19 @@
                 <div ng-show="fc.isSignedIn" layout="row">
                     <div class="toolbarBtns" ng-click="fc.selectView(6)" layout="row" layout-align="center center">
                         <i title="Settings" class="material-icons">settings</i>
-                        <span>Settings</span>
+                        <span class="optionLbl">Settings</span>
                     </div>
                     <div class="toolbarBtns" ng-click="fc.selectView(4)" layout="row" layout-align="center center">
                         <i title="Table" class="material-icons">assignment</i>
-                        <span>Table</span>
+                        <span class="optionLbl">Table</span>
                     </div>
                     <div class="toolbarBtns" ng-click="fc.selectView(5)" layout="row" layout-align="center center">
                         <i title="Graph" class="material-icons">equalizer</i>
-                        <span>Graph</span>
+                        <span class="optionLbl">Graph</span>
                     </div>
                     <div class="toolbarBtns" ng-click="fc.signOut()" layout="row" layout-align="center center">
                         <i title="Sign Out" class="material-icons">exit_to_app</i>
-                        <span>Sign Out</span>
+                        <span class="optionLbl">Sign Out</span>
                     </div>
                 </div>
                 <div ng-hide="fc.isSignedIn" layout="row">
